syntax = "proto3";
option go_package = "github.com/tdex-network/tdex-protobuf/generated/go/types";
option java_package = "network.tdex.types";

// Custom Types
message Fee {
  int64 basis_point = 2;
  Fixed fixed = 3;
}

message Fixed {
  int64 base_fee = 1;
  int64 quote_fee = 2;
}

message Balance {
  uint64 base_amount = 1;
  uint64 quote_amount = 2;
}

message BalanceWithFee {
  Balance balance = 1;
  Fee fee = 2;
}

message Market {
  string base_asset = 1;
  string quote_asset = 2;
}

message MarketWithFee {
  Market market = 1;
  Fee fee = 2;
}

message Price {
  float base_price_deprecated = 1;
  float quote_price_deprecated = 2;
  double base_price = 3;
  double quote_price = 4;
}

message PriceWithFee {
  Price price = 1;
  Fee fee = 2;
  uint64 amount = 3;
  string asset = 4;
  Balance balance = 5;
}

message AddressWithBlindingKey {
  // The confidential address encoded using a blech32 format.
  string address = 1;
  // The blinding private key for the given address encoded in hex format
  string blinding = 2;
}
